--- a/projects/demo/src/app/components/tabbars/tabbars.component.html
+++ b/projects/demo/src/app/components/tabbars/tabbars.component.html
@@ -1,4 +1,8 @@
 <div class="container mx-auto">
     <h2 class="ml-8 text-xl font-bold">Tab Bar</h2>
-    <tabbar-tubelight></tabbar-tubelight>
+
+    <div class="phone absolute flex flex-col justify-end border-4 border-black rounded-[1rem] overflow-hidden">
+        <static-n-radial class="absolute bottom-0 m-1"></static-n-radial>
+        <!-- <tabbar-tubelight class="absolute bottom-0 m-1"></tabbar-tubelight> -->
+    </div>
 </div>
