--- a/projects/demo/src/app/components/tabbars/tubelight/tubelight.component.sass
+++ b/projects/demo/src/app/components/tabbars/tubelight/tubelight.component.sass
@@ -1,5 +1,6 @@
 .active icons
-    stroke: #ffffff
+    // stroke: #ffffff
+    @apply text-white
     transition: stroke 200ms ease
     stroke-width: 2
     
