--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -1,4 +1,15 @@
-<tabbars></tabbars>
-
 <!-- <tabs></tabs> -->
- <router-outlet></router-outlet>
+
+<div class="container mx-auto">
+    <h2 class="ml-8 text-xl font-bold">Results</h2>
+
+    <div class="phone absolute flex flex-col border-4 border-black rounded-[1rem] overflow-hidden">
+        <!-- <static-n-radial class="absolute bottom-0 m-1"></static-n-radial> -->
+        <!-- <tabbar-tubelight class="absolute bottom-0 m-1"></tabbar-tubelight> -->
+        <router-outlet></router-outlet>
+        <tabbars></tabbars>
+        <div class="absolute right-32 bottom-2 left-32 h-1 bg-gray-200 rounded-full">
+            <span class="sr-only">Home Button</span>
+        </div>
+    </div>
+</div>
