finish named-pill-tabbar

--- a/projects/demo/src/app/components/buttons/bubbly-button/bubbly-button.component.sass
+++ b/projects/demo/src/app/components/buttons/bubbly-button/bubbly-button.component.sass
@@ -2,7 +2,7 @@ $button-bg: #4287f5
     
 .bubbly
     transition: transform ease-in 0.1s, box-shadow ease-in 0.25s
-    box-shadow: 2px 2px 25px rgba(52, 105, 191, .8)
+    box-shadow:  2px 2px 25px rgba(var(--accent), .8)
 
     &:before, &:after
         @apply absolute block h-full left-[-20%]
