--- a/projects/demo/src/app/components/tabbars/steam/steam.component.sass
+++ b/projects/demo/src/app/components/tabbars/steam/steam.component.sass
@@ -5,10 +5,10 @@
         @apply text-blue-400
 
     &::before
-        @apply absolute h-[2px] w-full bg-blue-400
+        @apply absolute top-0 h-[2px] w-full bg-blue-400
         content: ''
 
-a
+li
     @apply relative
 
     &:hover
