--- a/projects/demo/src/app/components/tabbars/tabbars.component.html
+++ b/projects/demo/src/app/components/tabbars/tabbars.component.html
@@ -1,4 +1,5 @@
 <!-- <radial-floating-menu></radial-floating-menu> -->
  <!-- <static-n-radial class="absolute bottom-0 m-1"></static-n-radial> -->
 <!-- <tabbar-tubelight class="absolute bottom-0 m-1"></tabbar-tubelight> -->
-<tabbar-steam class="absolute bottom-0 w-full"></tabbar-steam>
+<!-- <tabbar-steam class="absolute bottom-0 w-full"></tabbar-steam> -->
+<tabbar-named-pill class="absolute bottom-0 w-full"></tabbar-named-pill>
