--- a/projects/demo/src/app/components/tabbars/named-pill/named-pill.component.html
+++ b/projects/demo/src/app/components/tabbars/named-pill/named-pill.component.html
@@ -1,1 +1,19 @@
-<p>named-pill works!</p>
+<nav class="relative h-20 w-full pb-4 bg-gray-200 overflow-hidden">
+    <ul class="flex h-full w-full px-2 justify-around items-center">
+        <li class="block flex flex-row h-10 w-full p-2 px-4 justify-center items-center strike-1.5 text-gray-900 rounded-full cursor-pointer" *ngFor="let link of links; index as i"  [routerLink]="[link.path]" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+            <!-- background-color: #ffffff;
+            border-radius: 50px;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 0 20px;
+            margin: 0 10px;
+            transition: background 0.4s linear; -->
+            <div class="w-6 h-6">
+                <icons [name]="link.icon"></icons>
+            </div>
+            <span class="ml-2">{{ link.label }}</span>
+        </li>
+    </ul>
+</nav>
