--- a/projects/demo/src/app/components/tabbars/steam/steam.component.html
+++ b/projects/demo/src/app/components/tabbars/steam/steam.component.html
@@ -1,13 +1,11 @@
 <nav class="relative h-20 w-full pb-4 bg-gray-900 overflow-hidden">
     <ul class="flex h-full w-full justify-around items-center">
-        <li class="h-full w-full cursor-pointer" *ngFor="let link of links; index as i"  [routerLink]="[link.path]" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
-            <a class="block flex flex-col h-full w-full justify-center items-center strike-1.5 text-gray-500">
-                <div class="w-8 h-8">
-                    <span [ngClass]="[ link.indicator ? 'indicator' : 'hidden' ]"></span>
-                    <icons class="w-8 h-8" [name]="link.icon"></icons>
-                </div>
-                <span class="sr-only">{{ link.label }}</span>
-            </a>
+        <li class="block flex flex-col h-full w-full justify-center items-center strike-1.5 text-gray-500 cursor-pointer" *ngFor="let link of links; index as i"  [routerLink]="[link.path]" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+            <div class="w-8 h-8">
+                <span [ngClass]="[ link.indicator ? 'indicator' : 'hidden' ]"></span>
+                <icons class="w-8 h-8" [name]="link.icon"></icons>
+            </div>
+            <span class="sr-only">{{ link.label }}</span>
         </li>
     </ul>
 </nav>
