--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -3,6 +3,8 @@
 <div class="container mx-auto">
     <h2 class="ml-8 text-xl font-bold">Results</h2>
 
+    <cards></cards>
+
     <div class="phone absolute flex flex-col border-4 border-black rounded-[1rem] overflow-hidden">
         <!-- <static-n-radial class="absolute bottom-0 m-1"></static-n-radial> -->
         <!-- <tabbar-tubelight class="absolute bottom-0 m-1"></tabbar-tubelight> -->
