insert tailwind to card-carousel-1

--- a/projects/demo/src/app/components/cards/card-carousel-1/card-carousel-1.component.html
+++ b/projects/demo/src/app/components/cards/card-carousel-1/card-carousel-1.component.html
@@ -1,5 +1,15 @@
 <div class="col-12 popo"> 
     <ul class="carousel-simple">
+      <!-- carousel-simple  
+      list-style-type: none
+      margin: 30px auto
+      max-width: 100%
+      width: 650px
+      display: flex 
+      justify-content: center
+      min-height: 338px
+      padding: 0
+      position: relative -->
       <li> 
         <input class="carousel-toggle" type="radio" name="toggle" checked="checked" id="item-1"/> 
         <label class="dot" for="item-1"></label>
@@ -20,14 +30,14 @@
                 <icons name="arrow-left"></icons>
 
               </div>
-              <icons name="arrow-left"></icons>
-
               <!-- <img src="https://image.flaticon.com/icons/svg/126/126492.svg" alt=""> -->
-    
             </label>
             <label class="arrow next" for="item-3">
+              <div class="h-8 w-8">
+
               <icons name="arrow-left"></icons>
               <!-- <img src="https://image.flaticon.com/icons/svg/118/118740.svg" alt=""> -->
+              </div>
             </label>
           </li>
         </ul> 
