--- a/projects/demo/src/app/components/cards/card-carousel-1/card-carousel-1.component.sass
+++ b/projects/demo/src/app/components/cards/card-carousel-1/card-carousel-1.component.sass
@@ -1,152 +1,150 @@
-.carousel-simple 
-  list-style-type: none
-  margin: 30px auto
-  max-width: 100%
-  width: 650px
-  display: flex 
-  justify-content: center
-  min-height: 338px
-  padding: 0
-  position: relative
-  &.one-element 
-    .arrow, .dot 
-      display: none !important
-    
-  
-  .arrow 
-    display: flex !important
-    cursor: pointer
-    width: 35px
-    text-align: center
-    bottom: 0
-    top: 0
-    position: absolute
-    z-index: 2
-    transition: .5s
-    &:hover 
-      opacity: .5
-    
-
-    &.back 
-      left: -50px
-    
-
-    &.next 
-      right: -50px
-    
-    img 
-      height: 35px
-      width: 35px
-      position: absolute
-      top: 50%
-      left: 50%
-      transform: translate(-50%,-50%)
-    
-  
-
-  .carousel-content 
-    z-index: 0
-    opacity: 0
-    top: 0
+.carousel-simple
+    @apply relative flex w-full justify-center p-0 list-none
     list-style-type: none
+    margin: 30px auto
+    max-width: 100%
+    width: 650px
+    display: flex 
+    justify-content: center
+    min-height: 338px
     padding: 0
-    position: absolute
-    top: 50%
-    left: 50%
-    box-shadow: -2px 4px 20px 0 rgba(177, 183, 208, 0.5)
-    transform: translate(-50%,-50%)
-
-    p 
-      display: flex
-      align-items: center
-      min-height: 130px
-      font-size: 18px
-      font-style: italic
-      line-height: 1.5
-      font-family: arial
-      border-bottom: 1px solid rgb(235, 236, 240)
-      padding-bottom: 20px
-      margin-bottom: 20px
-      margin-top: 0
-    
-    .info 
-      float: left
-      padding: 30px 30px 20px 30px
-    
-  
-
-  .dot 
-    // top: 344px
-    top: 100%
-    width: 23px
-    height: 4px
-    border-radius: 2.5px
-    float: left
-    cursor: pointer
-    opacity: 1
-    background: rgba(255,255,255,0.5)
     position: relative
-    z-index: 1
-    margin-right: 8px
-    background: rgba(168, 172, 186, .25)
-    transition: 0.5s
+    &.one-element 
+        .arrow, .dot 
+            display: none !important
+    
+  
+    .arrow 
+        display: flex !important
+        cursor: pointer
+        width: 35px
+        text-align: center
+        bottom: 0
+        top: 0
+        position: absolute
+        z-index: 2
+        transition: .5s
 
-    &:hover 
-      background: #3698d1
+        &:hover 
+            opacity: .5
+    
+
+        &.back 
+            left: -50px
+        
+
+        &.next 
+            right: -50px
+    
+        img 
+            height: 35px
+            width: 35px
+            position: absolute
+            top: 50%
+            left: 50%
+            transform: translate(-50%,-50%)
     
   
 
-
-
-  .author 
-    display: flex
-    align-items: center
-    float: left
-    width: 100%
-
-    .img-container 
-      margin-right: 25px
-      background-image: linear-gradient(31deg,rgb(166, 112, 250), rgb(54, 152, 209))
-      width: 70px
-      height: 70px
-      float: left
-      position: relative
-      overflow: hidden
-      border-radius: 50%
-
-      img 
-        height: 100%
-        width: 100%
-        object-fit: cover
-        max-width: 65px
-        max-height: 65px
-        border-radius: 50%
-        border: 2px solid rgb(255, 255, 255)
+    .carousel-content 
+        z-index: 0
+        opacity: 0
+        top: 0
+        list-style-type: none
+        padding: 0
         position: absolute
         top: 50%
         left: 50%
+        box-shadow: -2px 4px 20px 0 rgba(177, 183, 208, 0.5)
         transform: translate(-50%,-50%)
+
+    p 
+        display: flex
+        align-items: center
+        min-height: 130px
+        font-size: 18px
+        font-style: italic
+        line-height: 1.5
+        font-family: arial
+        border-bottom: 1px solid rgb(235, 236, 240)
+        padding-bottom: 20px
+        margin-bottom: 20px
+        margin-top: 0
+    
+    .info 
+        float: left
+        padding: 30px 30px 20px 30px
+    
+  
+
+    .dot 
+        // top: 344px
+        top: 100%
+        width: 23px
+        height: 4px
+        border-radius: 2.5px
+        float: left
+        cursor: pointer
+        opacity: 1
+        background: rgba(255,255,255,0.5)
+        position: relative
+        z-index: 1
+        margin-right: 8px
+        background: rgba(168, 172, 186, .25)
+        transition: 0.5s
+
+    &:hover 
+        background: #3698d1
+
+
+    .author 
+        display: flex
+        align-items: center
+        float: left
+        width: 100%
+
+    .img-container 
+        margin-right: 25px
+        background-image: linear-gradient(31deg,rgb(166, 112, 250), rgb(54, 152, 209))
+        width: 70px
+        height: 70px
+        float: left
+        position: relative
+        overflow: hidden
+        border-radius: 50%
+
+        img 
+            height: 100%
+            width: 100%
+            object-fit: cover
+            max-width: 65px
+            max-height: 65px
+            border-radius: 50%
+            border: 2px solid rgb(255, 255, 255)
+            position: absolute
+            top: 50%
+            left: 50%
+            transform: translate(-50%,-50%)
       
     
 
     h3 
-      font-size: 18px
-      font-weight: bold
-      line-height: 1.7
-      font-family: arial
-      margin: 0
+        font-size: 18px
+        font-weight: bold
+        line-height: 1.7
+        font-family: arial
+        margin: 0
     
 
     span 
-      font-family: arial
-      font-size: 15px
-      font-weight: 500
-      color: #989a99
+        font-family: arial
+        font-size: 15px
+        font-weight: 500
+        color: #989a99
     
   
-
-  .carousel-toggle 
-    display: none
+    .carousel-toggle 
+        display: none
 
     &.active + .dot,
     &:checked + .dot 
@@ -165,48 +163,49 @@
 
 
 @media screen and (max-width: 768px) 
-  .carousel-simple 
-    min-height: 360px
-    
+    .carousel-simple 
+        min-height: 360px
+        
     .carousel-content 
-      p 
-        min-height: 180px
-        text-align: justify
-        font-size: 16px
-        padding-bottom: 15px
-        margin-bottom: 15px
-      
-      .info 
-        padding: 20px 20px 20px 20px
+        p 
+            min-height: 180px
+            text-align: justify
+            font-size: 16px
+            padding-bottom: 15px
+            margin-bottom: 15px
+        
+        .info 
+            padding: 20px 20px 20px 20px
 
     .author 
 
-      .img-container 
-        margin-right: 10px
-        width: 60px
-        height: 60px
-        img 
-          max-width: 55px
-          max-height: 55px
+        .img-container 
+            margin-right: 10px
+            width: 60px
+            height: 60px
+            
+            img 
+                max-width: 55px
+                max-height: 55px
         
       
 
-      h3 
-        font-size: 12px
-        line-height: 1
+        h3 
+            font-size: 12px
+            line-height: 1
       
 
-      span 
-        font-size: 10px
+        span 
+            font-size: 10px
       
     
 
     .carousel-toggle 
 
-      &.active ~ .carousel-content,
-      &:checked ~ .carousel-content 
-        width: 300px
-        z-index: 1
+        &.active ~ .carousel-content,
+        &:checked ~ .carousel-content 
+            width: 300px
+            z-index: 1
       
     
   
